# rag_blueprint

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  chainlit.md  mkdocs.yml  pyproject.toml
.github/workflows/: branches_sync.yml  ci.yml  docs.yml
configuration/: configuration.default.json
configurations/: configuration.default.json  configuration.local.json
docs/: create_docs.py  index.md
docs/how_to/: how_to_add_new_datasource.md  how_to_add_new_embedding_model.md  how_to_add_new_llm.md  how_to_add_new_vector_store.md  how_to_configure.md
docs/monitoring/: in_progress.md
docs/quickstart/: developer_setup.md  quickstart_setup.md
docs/src/: chat.md  embed.md  evaluate.md
docs/src/augmentation/: utils.md
docs/src/augmentation/chainlit/: builders.md  feedback.md  service.md
docs/src/common/: exceptions.md  logger.md  query_engine.md  retrievers.md
docs/src/common/bootstrap/: base_binder.md  initializer.md  secrets_configuration.md
docs/src/common/builders/: callback_builders.md  client_builders.md  embedding_builders.md  llm_builders.md  postprocessor_builders.md  query_engine_builders.md  retriever_builders.md  synthesizer_builders.md  vector_store_builders.md
docs/src/common/langfuse/: builders.md  dataset.md
docs/src/embedding/datasources/: confluence.md  core.md  notion.md  pdf.md
docs/src/embedding/embedders/: base.md  builders.md  default_embedder.md
docs/src/embedding/orchestrators/: base.md  builders.md  datasource_orchestrator.md
docs/src/embedding/validators/: builders.md  vector_store_validators.md
docs/src/evaluation/: builders.md  evaluators.md
res/readme/: Knowledge-Base.fig
src/: chat.py  embed.py  evaluate.py
src/augmentation/: utils.py
src/augmentation/chainlit/: builders.py  feedback.py  service.py
src/common/: exceptions.py  logger.py  query_engine.py  retrievers.py
src/common/bootstrap/: base_binder.py  initializer.py  secrets_configuration.py
src/common/bootstrap/configuration/: configuration.json  configuration.py
src/common/builders/: callback_builders.py  client_builders.py  embedding_builders.py  llm_builders.py  postprocessor_builders.py  query_engine_builders.py  retriever_builders.py  synthesizer_builders.py  vector_store_builders.py
src/common/langfuse/: builders.py  dataset.py
src/embedding/datasources/confluence/: builders.py  cleaner.py  document.py  manager.py  reader.py  splitter.py
src/embedding/datasources/core/: builders.py  cleaner.py  document.py  manager.py  reader.py  splitter.py
src/embedding/datasources/hackernews/: builders.py  cleaner.py  document.py  manager.py  reader.py  splitter.py
src/embedding/datasources/notion/: builders.py  cleaner.py  document.py  exporter.py  manager.py  reader.py  splitter.py
src/embedding/datasources/pdf/: builders.py  document.py  manager.py  reader.py
src/embedding/embedders/: base.py  builders.py  default_embedder.py
src/embedding/orchestrators/: base.py  builders.py  datasource_orchestrator.py
src/embedding/validators/: builders.py  vector_store_validators.py
src/evaluation/: builders.py  evaluators.py
tests/augmentation/: test_utils.py
tests/augmentation/chainlit/: test_feedback.py  test_service.py
tests/common/: test_dataset_service.py  test_query_engine.py
tests/embedding/datasources/confluence/: test_confluence_reader.py
tests/embedding/datasources/core/: test_core_cleaner.py  test_datasource_manager.py  test_splitter.py
tests/embedding/datasources/hackernews/: test_hackernews_reader.py
tests/embedding/datasources/notion/: test_notion_cleaner.py  test_notion_reader.py
tests/embedding/datasources/pdf/: test_pdf_cleaner.py  test_pdf_reader.py
tests/embedding/embedders/: test_embedder.py
tests/embedding/orchestrators/: test_datasource_orchestrator.py
tests/embedding/validators/: test_vector_store_validator.py
tests/evaluation/: test_langfuse_evaluator.py  test_ragas_evaluator.py
(+67 files in other folders)
