[project]
name = "rag-blueprint"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "atlassian-python-api==3.41.11",
    "annotated-types==0.7.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "chainlit==2.2.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "chromadb==0.6.3",
    "cryptography==44.0.0",
    "dataclasses-json==0.6.7",
    "datasets==2.19.1",
    "deprecated==1.2.14",
    "fastapi==0.115.6",
    "fsspec==2024.3.1",
    "httpx==0.28.1",
    "iniconfig==2.0.0",
    "injector==0.22.0",
    "joblib==1.4.2",
    "langfuse==2.55.0",
    "llama-index==0.11.20",
    "llama-index-agent-openai==0.3.4",
    "llama-index-callbacks-langfuse==0.2.0",
    "llama-index-cli==0.3.1",
    "llama-index-core==0.11.20",
    "llama-index-embeddings-huggingface==0.3.1",
    "llama-index-embeddings-openai==0.2.4",
    "llama-index-embeddings-voyageai==0.2.2",
    "llama-index-indices-managed-llama-cloud==0.4.0",
    "llama-index-legacy==0.9.48",
    "llama-index-llms-openai==0.2.16",
    "llama-index-llms-openai-like==0.2.0",
    "llama-index-multi-modal-llms-openai==0.2.3",
    "llama-index-postprocessor-colbert-rerank==0.2.1",
    "llama-index-program-openai==0.2.0",
    "llama-index-question-gen-openai==0.2.0",
    "llama-index-readers-file==0.2.2",
    "llama-index-readers-llama-parse==0.3.0",
    "llama-index-vector-stores-chroma==0.3.0",
    "llama-index-vector-stores-qdrant==0.3.2",
    "llamaindex-py-client==0.1.19",
    "llmsherpa==0.1.4",
    "markdownify==0.13.1",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.2.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocstrings==0.27.0",
    "mkdocstrings-python==1.12.2",
    "more-itertools==10.3.0",
    "networkx==3.3",
    "notion==0.0.28",
    "notion-client==2.2.1",
    "notion-exporter==0.1.1",
    "notion2md==2.9.0",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "openai==1.61.0",
    "packaging==23.2",
    "pandas==2.2.2",
    "pathspec==0.12.1",
    "pillow==10.3.0",
    "pluggy==1.5.0",
    "pre-commit==3.7.1",
    "protobuf==4.25.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.2.1",
    "pyjwt==2.8.0",
    "pymdown-extensions==10.12",
    "pypdf==4.2.0",
    "pytest==8.3.1",
    "pytest-asyncio==0.23.8",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-engineio==4.9.0",
    "python-multipart==0.0.18",
    "python-on-whales==0.74.0",
    "python-slugify==8.0.4",
    "python-socketio==5.11.2",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyyaml-env-tag==0.1",
    "qdrant-client==1.12.0",
    "ragas==0.1.14",
    "regex==2024.5.10",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "safetensors==0.4.3",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "sentence-transformers==2.7.0",
    "setuptools==69.5.1",
    "simple-websocket==1.0.0",
    "six==1.17.0",
    "soupsieve==2.6",
    "sqlalchemy==2.0.30",
    "starlette==0.41.3",
    "striprtf==0.0.26",
    "sympy==1.12",
    "syncer==2.0.3",
    "tenacity==8.3.0",
    "text-unidecode==1.3",
    "thinc==8.2.5",
    "threadpoolctl==3.5.0",
    "tiktoken==0.7.0",
    "tqdm==4.66.4",
    "transformers==4.44.2",
    "typer==0.9.4",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2024.1",
    "tzlocal==5.2",
    "uptrace==1.24.0",
    "urllib3==2.2.1",
    "uvicorn==0.25.0",
    "voyageai==0.2.4",
    "wasabi==1.1.3",
    "watchdog==6.0.0",
    "watchfiles==0.20.0",
    "weasel==0.3.4",
    "wrapt==1.16.0",
    "wsproto==1.2.0",
    "xxhash==3.5.0",
    "yarl==1.9.4",
    "zipp==3.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/"]
